--- a/vibe_coding实践文档/故障排查及解决文档.md
+++ b/vibe_coding实践文档/故障排查及解决文档.md
@@ -1,6 +1,6 @@
 # DreamAIChat 故障排查及解决文档
 
-本文档记录项目开发过程中遇到的各种错误、异常及其解决方案，方便后续参考和快速定位问题。
+本文档记录项目开发过程中遇到的各种错误、异常及其解决方案，方便后续参考和快速定位问题。由我与 Cursor（GPT-5.1 Codex）在多轮问答、实践、验证中共同整理：我提出问题与验收标准，Cursor 解释、给出方案，我在本地实测与追问。
 
 ---
 
@@ -10,8 +10,11 @@
   - [JWT 密钥长度不足错误](#jwt-密钥长度不足错误)
 - [Gradle 构建问题](#gradle-构建问题)
 - [Android 客户端问题](#android-客户端问题)
+- [UI 调整与部署小问题](#ui-调整与部署小问题)
 
 ---
+
+
 
 ## 后端启动错误
 
@@ -104,6 +107,8 @@ Process finished with exit code 1
 
 ---
 
+
+
 ### JWT 密钥长度不足错误
 
 **错误信息**：
@@ -153,6 +158,8 @@ security:
 
 ---
 
+
+
 ## Gradle 构建问题
 
 ### Gradle Wrapper 文件缺失
@@ -191,6 +198,8 @@ Gradle 同步或构建时下载依赖速度很慢。
 - `DreamAIChat_backend/settings.gradle.kts`
 
 ---
+
+
 
 ## Android 客户端问题
 
@@ -237,6 +246,28 @@ return userRepository.getUserByAccount(account)
 **发生时间**：2025-12-03
 
 ---
+
+
+
+## UI 调整与部署小问题
+
+### 快捷芯片居中分布与删除“结构分析”
+- **问题**：删除“结构分析”芯片后，剩余 3 个芯片偏左、不均匀。  
+- **处理**：将 ChipGroup 包裹在居中的 LinearLayout，ChipGroup 设为 wrap_content + center_horizontal。布局文件：`app/src/main/res/layout/fragment_chat.xml`。
+
+### 顶部功能栏位置反复调优
+- **问题**：顶部（菜单/设置/新对话）栏偏上或偏下。  
+- **处理**：调整 `model_header` 的 `layout_marginTop`（从 24dp → 16dp → 12dp → 适中回调）。最新为 12dp，并可视检查。
+  
+### 部署打包清理
+
+- **问题**：仓库内存在无用压缩包（backend.zip、gradle-8.13-bin.zip、gradle-8.13-unpack）。  
+- **处理**：已删除，避免误提交和磁盘浪费。
+
+### 云端关停与 PID 定位
+
+- **问题**：后台运行的后端需安全关闭；用户不熟悉 PID 查找。  
+- **处理**：在《部署指南》§5.8 增补了 `lsof -i :8082` / `ps aux | grep java` 查 PID，按 PID kill，并在关闭前退出 screen/nohup 会话。
 
 ### XML 布局文件 BOM 字符错误
 
@@ -314,6 +345,8 @@ Get-ChildItem app\src\main\res\layout\*.xml | ForEach-Object {
 
 ---
 
+
+
 ### 后端连接失败
 
 **错误信息**：
@@ -342,6 +375,8 @@ java.net.ConnectException: Failed to connect to /10.0.2.2:8081
 ---
 
 ---
+
+
 
 ## API 调用超时问题
 
@@ -393,6 +428,8 @@ OkHttpClient okHttpClient = new OkHttpClient.Builder()
 
 ---
 
+
+
 ### Android 资源缺失：`color/secondary not found`
 
 **错误信息**：
@@ -437,6 +474,8 @@ error: failed linking file resources.
 **发生时间**：2025-12-02
 
 ---
+
+
 
 ## 依赖问题排查（整合自《依赖问题排查指南》）
 
@@ -546,6 +585,8 @@ error: failed linking file resources.
 
 ---
 
+
+
 ## API Key 配置问题
 
 ### 问题描述
@@ -642,6 +683,8 @@ error: failed linking file resources.
 
 ---
 
+
+
 ## 历史会话仅显示最后一轮对话
 
 ### 问题描述
@@ -672,6 +715,8 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 
 ---
 
+
+
 ## 对话时间显示不准确 / 聊天气泡重复展示时间
 
 ### 问题描述
@@ -693,6 +738,8 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 **发生时间**：2025-12-01
 
 ---
+
+
 
 ## 历史页“开始对话”按钮无响应
 
@@ -719,6 +766,8 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 
 ---
 
+
+
 ## 聊天页快捷 Chip / 图片预览遮挡模型切换
 
 ### 问题描述
@@ -741,6 +790,8 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 **发生时间**：2025-12-02
 
 ---
+
+
 
 ## 发送图片后看不到任何气泡
 
@@ -770,6 +821,8 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 
 ---
 
+
+
 ## Toast 中文提示出现乱码
 
 ### 问题描述
@@ -792,6 +845,8 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 **发生时间**：2025-12-02
 
 ---
+
+
 
 ## Android 资源链接错误
 
@@ -820,6 +875,8 @@ com.example.dreamaichat_app-mergeDebugResources-48:/layout/fragment_chat.xml:184
 **发生时间**：2025-12-02
 
 ---
+
+
 
 ## 对话图谱功能改进
 
@@ -856,6 +913,8 @@ com.example.dreamaichat_app-mergeDebugResources-48:/layout/fragment_chat.xml:184
 
 ---
 
+
+
 ## 聊天输入框按钮样式优化
 
 ### 问题描述
@@ -887,7 +946,9 @@ com.example.dreamaichat_app-mergeDebugResources-48:/layout/fragment_chat.xml:184
 
 ---
 
-## 更新日志
+
+
+## 更新关键节点日志
 
 - **2025-11-28**：
   - 添加 JWT 密钥长度不足错误的解决方案
